--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.6.2",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
