--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.8.1",
+    "@stripe/stripe-js": "^1.29.0",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "stripe": "^9.2.0"
