--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.8.1",
     "@stripe/stripe-js": "^1.29.0",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "stripe": "^9.2.0"
